--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,9 @@
 <% posts.forEach(function (post, index) { %>
   <p><h2><a href="u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></h2></p>
 	<p class="info">
-	  作者：<a href="/u/<%= post.name %>"><%= post.name %></a> | 
-	  日期：<%= post.time.minute %> | 
-	  标签：
+	  POSTED BY： <a href="/u/<%= post.name %>"><%= post.name %></a> | 
+	  DATE：<%= post.time.minute %> | 
+	  TAG：
 	  <% post.tags.forEach(function (tag, index) { %>
 	    <% if (tag) { %>
 	      <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
@@ -12,7 +12,7 @@
 	  <% }) %>
 	</p>
   <p><%- post.post %></p>
-  <p class="info">阅读：<%= post.pv %> | 评论：<%= post.comments.length %></p>
+  <p class="info">Views: <%= post.pv %> | Comments: <%= post.comments.length %></p>
   <% }) %>
 <%- include paging %>
 <%- include footer %>
