--- a/views/paging.ejs
+++ b/views/paging.ejs
@@ -1,10 +1,10 @@
 <br />
 <div>
   <% if (!isFirstPage) { %>
-    <span class="prepage"><a title="上一页" href="?p=<%= page-1 %>">上一页</a></span>
+    <span class="prepage"><a title="Page Up" href="?p=<%= page-1 %>">Page Up</a></span>
   <% } %>
 
   <% if (!isLastPage) { %>
-    <span class="nextpage"><a title="下一页" href="?p=<%= page+1 %>">下一页</a></span>
+    <span class="nextpage"><a title="Page Down" href="?p=<%= page+1 %>">Page Down</a></span>
   <% } %>
 </div>
