--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,14 +1,14 @@
 <%- include header %>
 <p>
   <% if (user && (user.name == post.name)) { %>
-  <span><a class="edit" href="/edit/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">编辑</a></span>
-  <span><a class="edit" href="/remove/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">删除</a></span>
+  <span><a class="edit" href="/edit/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">Edit</a></span>
+  <span><a class="edit" href="/remove/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">Delete</a></span>
   <% } %>
 </p>
 <p class="info">
-  作者：<a href="/u/<%= post.name %>"><%= post.name %></a> | 
-  日期：<%= post.time.minute %> | 
-  标签：
+  POSTED BY：<a href="/u/<%= post.name %>"><%= post.name %></a> | 
+  DATE：<%= post.time.minute %> | 
+  TAG：
   <% post.tags.forEach(function (tag, index) { %>
     <% if (tag) { %>
       <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
@@ -16,6 +16,6 @@
   <% }) %>
 </p>
 <p><%- post.post %></p>
-<p class="info">阅读：<%= post.pv %> | 评论：<%= post.comments.length %></p>
+<p class="info">Views：<%= post.pv %> | Comments：<%= post.comments.length %></p>
 <%- include comment %>
 <%- include footer %>
