--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -7,14 +7,14 @@
 
 <form method="post" action="/u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">
 <% if (user) { %>
-  姓名：<input type="text" name="name" value="<%= user.name %>" /><br />
-  邮箱：<input type="text" name="email" value="<%= user.email %>" /><br />
-  网址：<input type="text" name="website" value="/u/<%= user.name %>" /><br />
+  User Name：<input type="text" name="name" value="<%= user.name %>" /><br />
+  Email：<input type="text" name="email" value="<%= user.email %>" /><br />
+  Website：<input type="text" name="website" value="/u/<%= user.name %>" /><br />
 <% } else { %>
-  姓名：<input type="text" name="name" /><br />
-  邮箱：<input type="text" name="email" /><br />
-  网址：<input type="text" name="website" value="http://" /><br />
+  User Name：<input type="text" name="name" /><br />
+  Email：<input type="text" name="email" /><br />
+  Website：<input type="text" name="website" value="http://" /><br />
 <% } %>
   <textarea name="content" rows="5" cols="80"></textarea><br />
-  <input type="submit" value="留言" />
+  <input type="submit" value="Comment" />
 </form>
