--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,16 +12,17 @@
 </header>
 
 <nav>
-<span><a title="主页" href="/">home</a></span>
-<span><a title="存档" href="/archive">archive</a></span>
-<span><a title="标签" href="/tags">tags</a></span>
+<span><a title="HOME" href="/">home</a></span>
+<span><a title="Archive" href="/archive">archive</a></span>
+<span><a title="Tags" href="/tags">tags</a></span>
+<span><a title="Links" href="/links">links</a></span>
 <% if (user) { %>
-  <span><a title="上传" href="/upload">upload</a></span>
-  <span><a title="发表" href="/post">post</a></span>
-  <span><a title="登出" href="/logout">logout</a></span>
+  <span><a title="Upload" href="/upload">upload</a></span>
+  <span><a title="Post" href="/post">post</a></span>
+  <span><a title="Logout" href="/logout">logout</a></span>
 <% } else { %>
-  <span><a title="登录" href="/login">login</a></span>
-  <span><a title="注册" href="/reg">register</a></span>
+  <span><a title="Login" href="/login">login</a></span>
+  <span><a title="Register" href="/reg">register</a></span>
 <% } %>
 <span><form action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH" class="search" /></form></span>
 </nav>
