--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include header %>
 <form method="post">
-  用户名：<input type="text" name="name"/><br />
-  密码：  <input type="password" name="password"/><br />
-         <input type="submit" value="登录"/>
+  User Name：<input type="text" name="name"/><br />
+  Password：  <input type="password" name="password"/><br />
+         <input type="submit" value="Login"/>
 </form>
 <%- include footer %>
