--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,21 +1,52 @@
 <%- include header %>
 <p>
-  <% if (user && (user.name == post.name)) { %>
-  <span><a class="edit" href="/edit/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">Edit</a></span>
-  <span><a class="edit" href="/remove/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">Delete</a></span>
-  <% } %>
+    <% if (user && (user.name == post.name)) { %>
+    <span><a class="edit" href="/edit/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">Edit</a></span>
+    <span><a class="edit" href="/remove/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">Delete</a></span>
+    <% } %>
+
+    <% var flag = 1 %>
+    <% if (user && (user.name != post.name)) { %>
+        <% if ((post.reprint_info.reprint_from != undefined) && (user.name == post.reprint_info.reprint_from.name)) { %>
+            <% flag = 0 %>
+        <% } %>
+    <% if ((post.reprint_info.reprint_to != undefined)) { %>
+        <% post.reprint_info.reprint_to.forEach(function (reprint_to, index) { %>
+            <% if (user.name == reprint_to.name) { %>
+                <% flag = 0 %>
+            <% } %>
+        <% }) %>
+    <% } %>
+    <% } else { %>
+        <% flag = 0 %>
+    <% } %>
+    <% if (flag) { %>
+        <span><a class="edit" href="/reprint/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">转载</a></span>
+    <% } %>
 </p>
 <p class="info">
-  POSTED BY：<a href="/u/<%= post.name %>"><%= post.name %></a> | 
-  DATE：<%= post.time.minute %> | 
-  TAG：
-  <% post.tags.forEach(function (tag, index) { %>
+    POSTED BY：<a href="/u/<%= post.name %>"><%= post.name %></a> |
+    DATE：<%= post.time.minute %> |
+    TAG：
+    <% post.tags.forEach(function (tag, index) { %>
     <% if (tag) { %>
-      <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
+    <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
     <% } %>
-  <% }) %>
+    <% }) %>
+    <% if (post.reprint_info.reprint_from) { %>
+        <br><a href="/u/<%= post.reprint_info.reprint_from.name %>/<%= post.reprint_info.reprint_from.day %>/<%= post.reprint_info.reprint_from.title %>">Original Link</a>
+    <% } %>
 </p>
 <p><%- post.post %></p>
-<p class="info">Views：<%= post.pv %> | Comments：<%= post.comments.length %></p>
+<p class="info">
+    Views：<%= post.pv %> |
+    Comments：<%= post.comments.length %> |
+    Reprints：
+    <% if (post.reprint_info.reprint_to) { %>
+    <%= post.reprint_info.reprint_to.length %>
+    <% } else { %>
+    <%= 0 %>
+    <% } %>
+</p>
 <%- include comment %>
 <%- include footer %>
