--- a/views/article.ejs
+++ b/views/article.ejs
@@ -7,21 +7,22 @@
 
     <% var flag = 1 %>
     <% if (user && (user.name != post.name)) { %>
-        <% if ((post.reprint_info.reprint_from != undefined) && (user.name == post.reprint_info.reprint_from.name)) { %>
-            <% flag = 0 %>
-        <% } %>
-    <% if ((post.reprint_info.reprint_to != undefined)) { %>
-        <% post.reprint_info.reprint_to.forEach(function (reprint_to, index) { %>
-            <% if (user.name == reprint_to.name) { %>
-                <% flag = 0 %>
-            <% } %>
-        <% }) %>
-    <% } %>
-    <% } else { %>
+      <% if ((post.reprint_info.reprint_from != undefined) && (user.name == post.reprint_info.reprint_from.name)) { %>
         <% flag = 0 %>
+      <% } %>
+      <% if ((post.reprint_info.reprint_to != undefined)) { %>
+        <% post.reprint_info.reprint_to.forEach(function (reprint_to, index) { %>
+          <% if (user.name == reprint_to.name) { %>
+            <% flag = 0 %>
+          <% } %>
+        <% }) %>
+      <% } %>
+    <% } else { %>
+      <% flag = 0 %>
     <% } %>
+
     <% if (flag) { %>
-        <span><a class="edit" href="/reprint/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">转载</a></span>
+      <span><a class="edit" href="/reprint/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">Reprint</a></span>
     <% } %>
 </p>
 <p class="info">
@@ -33,20 +34,21 @@
     <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
     <% } %>
     <% }) %>
+    
     <% if (post.reprint_info.reprint_from) { %>
-        <br><a href="/u/<%= post.reprint_info.reprint_from.name %>/<%= post.reprint_info.reprint_from.day %>/<%= post.reprint_info.reprint_from.title %>">Original Link</a>
+      <br><a href="/u/<%= post.reprint_info.reprint_from.name %>/<%= post.reprint_info.reprint_from.day %>/<%= post.reprint_info.reprint_from.title %>">Original Link</a>
     <% } %>
 </p>
 <p><%- post.post %></p>
 <p class="info">
-    Views：<%= post.pv %> |
-    Comments：<%= post.comments.length %> |
-    Reprints：
-    <% if (post.reprint_info.reprint_to) { %>
+  Views：<%= post.pv %> |
+  Comments：<%= post.comments.length %> |
+  Reprints：
+  <% if (post.reprint_info.reprint_to) { %>
     <%= post.reprint_info.reprint_to.length %>
-    <% } else { %>
+  <% } else { %>
     <%= 0 %>
-    <% } %>
+  <% } %>
 </p>
 <%- include comment %>
 <%- include footer %>
