--- a/views/tag.ejs
+++ b/views/tag.ejs
@@ -1,12 +1,18 @@
 <%- include header %>
-<ul class="archive">
-<% var lastYear = 0 %>
-<% posts.forEach(function (post, index) { %>
-  <% if (lastYear != post.time.year) { %>
-    <li><h3><%= post.time.year %></h3></li>
-  <% lastYear = post.time.year } %>
-    <li><time><%= post.time.day %></time></li>
-    <li><a href="/u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></li>
-<% }) %>
-</ul>
+<div class="container-fluid container-fluid-second">
+    <div class="row" style="margin-left: 5%; margin-right: 45%">
+        <ul class="archive">
+            <% var lastYear = 0 %>
+            <% posts.forEach(function (post, index) { %>
+            <% if (lastYear != post.time.year) { %>
+            <li><h3><%= post.time.year %></h3></li>
+            <% lastYear = post.time.year } %>
+            <li>
+                <time><%= post.time.day %></time>
+            </li>
+            <li><a href="/u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></li>
+            <% }) %>
+        </ul>
+    </div>
+</div>
 <%- include footer %>
