--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -7,7 +7,7 @@
   </div>
 <% }) %>
 
-<form method="post" action="/u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">
+<form method="post" style="margin-top: 5%" action="/u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">
 <% if (user) { %>
   User Name：<input type="text" name="name" value="<%= user.name %>" /><br />
   Email：<input type="text" name="email" value="<%= user.email %>" /><br />
@@ -18,5 +18,7 @@
   Website：<input type="text" name="website" value="http://" /><br />
 <% } %>
   <textarea name="content" rows="5" cols="80"></textarea><br />
-  <input type="submit" value="Comment" />
+  <button class="btn btn-primary" type="submit" value="Comment" style="margin-left: 40%; margin-top: 3%"> Comment
+    </button>
+  <!--<input type="submit" value="Comment" />-->
 </form>
