--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,13 +1,17 @@
 <%- include header %>
-<form method="post">
-  Title：<br />
-  <input type="text" name="title" value="<%= post.title %>" disabled="disabled" /><br />
-  Tag：<br />
-  <input type="text" name="tag1" value="<%= post.tags[0] %>" disabled="disabled" />
-  <input type="text" name="tag2" value="<%= post.tags[1] %>" disabled="disabled" />
-  <input type="text" name="tag3" value="<%= post.tags[2] %>" disabled="disabled" /><br />
-  Body：<br />
-  <textarea name="post" rows="20" cols="100"><%= post.post %></textarea><br />
-  <input type="submit" value="Save" />
-</form>
+<div class="container-fluid container-fluid-second">
+    <div class="row" style="margin-left: 5%; margin-right: 45%">
+        <form method="post">
+            Title：<br/>
+            <input type="text" name="title" value="<%= post.title %>" disabled="disabled"/><br/>
+            Tag：<br/>
+            <input type="text" name="tag1" value="<%= post.tags[0] %>" disabled="disabled"/>
+            <input type="text" name="tag2" value="<%= post.tags[1] %>" disabled="disabled"/>
+            <input type="text" name="tag3" value="<%= post.tags[2] %>" disabled="disabled"/><br/>
+            Body：<br/>
+            <textarea name="post" rows="20" cols="100"><%= post.post %></textarea><br/>
+            <input type="submit" value="Save"/>
+        </form>
+    </div>
+</div>
 <%- include footer %>
