--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,14 +4,47 @@
 <meta charset="UTF-8" />
 <title>Blog</title>
 <link rel="stylesheet" href="/stylesheets/style.css">
+<link rel="stylesheet" href="/stylesheets/customize.css">
+<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+<link rel="stylesheet" href="/stylesheets/bootstrap-theme.min.css">
 </head>
 <body>
 
-<header>
+<!-- <header>
 <h1><%= title %> </h1>
-</header>
+</header> -->
 
-<nav>
+
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container-fluid container-fluid-nav">
+        <div class="navbar-header">
+          <!--<div class="navbar-brand">-->
+            <h1 style="font-size: 30px; margin-top: 15%; color: #2b542c">Blog Platform</h1>
+          <!--</div>-->
+        </div>
+
+        <div id="navbar" class="navbar-collapse collapse">
+
+          <ul class="nav nav-pills" style="font-size: 17px; margin-left: 20%">
+            <li <% if (page_name === 'home') { %>class="active" <% } %>><a title="Home" href="/">Home</a></li>
+            <% if (user) { %>
+              <li <% if (page_name === 'post') { %>class="active" <% } %>><a title="Post" href="/post">Post</a></li>
+              <li <% if (page_name === 'tags') { %>class="active" <% } %>><a title="Tags" href="/tags">Tags</a></li>
+              <li <% if (page_name === 'upload') { %>class="active" <% } %>><a title="File Upload" href="/upload">Upload File</a></li>
+              <li><a title="Logout" href="/logout">Logout</a></li>
+          <% } else { %>
+              <li <% if (page_name === 'login') { %>class="active" <% } %>><a title="Login" href="/login">Login</a></li>
+              <li <% if (page_name === 'reg') { %>class="active" <% } %>><a title="Register" href="/reg">Register</a></li>
+          <% } %>
+              <li style="margin-left: 20%"><form action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH" class="search;  form-control" /></form></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+</nav>
+
+
+
+<!-- <nav>
 <span><a title="HOME" href="/">home</a></span>
 <span><a title="Archive" href="/archive">archive</a></span>
 <span><a title="Tags" href="/tags">tags</a></span>
@@ -25,7 +58,9 @@
   <span><a title="Register" href="/reg">register</a></span>
 <% } %>
 <span><form action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH" class="search" /></form></span>
-</nav>
+</nav> -->
+
+
 
 <article>
 
