--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,34 +1,46 @@
 <%- include header %>
-<% posts.forEach(function (post, index) { %>
-<p><h2><a href="u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></h2>
-<a href="/u/<%= post.name %>"><img src="<%= post.head %>" class="r_head"/></a>
-</p>
-<p class="info">
-    POSTED BY： <a href="/u/<%= post.name %>"><%= post.name %></a> |
-    DATE：<%= post.time.minute %> |
-    TAG：
-    <% post.tags.forEach(function (tag, index) { %>
-        <% if (tag) { %>
-        <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
-        <% } %>
-    <% }) %>
+<div class="container-fluid container-fluid-second">
+    <div class="row">
+        <div class="col-sm-7 blog-main" style="margin-left: 5%">
+            <% posts.forEach(function (post, index) { %>
+            <div class="panel panel-primary">
+                <div class="panel-body" style="margin-top: -30px;">
+                    <p><h2><a href="u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></h2>
+                    <a href="/u/<%= post.name %>"><img src="<%= post.head %>" class="r_head"/></a>
+                    </p>
+                    <p class="info">
+                        POSTED BY： <a href="/u/<%= post.name %>"><%= post.name %></a> |
+                        DATE：<%= post.time.minute %> |
+                        TAG：
+                        <% post.tags.forEach(function (tag, index) { %>
+                            <% if (tag) { %>
+                            <a class="tag" href="/tags/<%= tag %>"><%= tag %></a>
+                            <% } %>
+                        <% }) %>
 
-    <% if (post.reprint_info.reprint_from) { %>
-      <br><a href="/u/<%= post.reprint_info.reprint_from.name %>/<%= post.reprint_info.reprint_from.day %>/<%= post.reprint_info.reprint_from.title %>">Original Link</a>
-    <% } %>
-</p>
+                        <% if (post.reprint_info.reprint_from) { %>
+                          <br><a href="/u/<%= post.reprint_info.reprint_from.name %>/<%= post.reprint_info.reprint_from.day %>/<%= post.reprint_info.reprint_from.title %>">Original Link</a>
+                        <% } %>
+                    </p>
 
-<p><%- post.post %></p>
-<p class="info">
-  Views：<%= post.pv %> |
-  Comments：<%= post.comments.length %> |
-  Reprints：
-  <% if (post.reprint_info.reprint_to) { %>
-    <%= post.reprint_info.reprint_to.length %>
-  <% } else { %>
-    <%= 0 %>
-  <% } %>
-</p>
-<% }) %>
+                    <p><%- post.post %></p>
+                    <p class="info">
+                      Views：<%= post.pv %> |
+                      Comments：<%= post.comments.length %> |
+                      Reprints：
+                      <% if (post.reprint_info.reprint_to) { %>
+                        <%= post.reprint_info.reprint_to.length %>
+                      <% } else { %>
+                        <%= 0 %>
+                      <% } %>
+                    </p>
+                </div>
+            </div>
+            <% }) %>
+        </div>
+        <%- include siderbar %>
+    </div>
+</div> 
+
 <%- include paging %>
 <%- include footer %>
