--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,13 +1,17 @@
 <%- include header %>
-<form method="post">
-  Title：<br />
-  <input type="text" name="title" /><br /> 
-  Tag：<br />
-<input type="text" name="tag1" />
-<input type="text" name="tag2" />
-<input type="text" name="tag3" /><br />
-  Body：<br />
-  <textarea name="post" rows="20" cols="100"></textarea><br />
-  <input type="submit" value="发表" />
-</form>
+<div class="container-fluid container-fluid-second">
+    <div class="row" style="margin-left: 5%; margin-right: 45%">
+        <form method="post">
+            Title：<br/>
+            <input type="text" name="title"/><br/>
+            Tag：<br/>
+            <input type="text" name="tag1"/>
+            <input type="text" name="tag2"/>
+            <input type="text" name="tag3"/><br/>
+            Body：<br/>
+            <textarea name="post" rows="20" cols="100"></textarea><br/>
+            <input class="btn btn-primary" type="submit" value="Post"/>
+        </form>
+    </div>
+</div>
 <%- include footer %>
