--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -1,9 +1,13 @@
 <%- include header %>
-<form method="post">
-  User Name：  <input type="text" name="name"/><br />
-  Password：    <input type="password" name="password"/><br />
-  Comfirmed Password：<input type="password" name="password-repeat"/><br />
-  Email：    <input type="email" name="email"/><br />
-           <input type="submit" value="注册"/>
-</form>
+<div class="container-fluid container-fluid-second">
+    <div class="row" style="margin-left: 5%; margin-right: 45%">
+        <form method="post">
+            User Name： <input type="text" name="name"/><br/>
+            Password： <input type="password" name="password"/><br/>
+            Comfirmed Password：<input type="password" name="password-repeat"/><br/>
+            Email： <input type="email" name="email"/><br/>
+            <input type="submit" value="注册"/>
+        </form>
+    </div>
+</div>
 <%- include footer %>
