--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,7 +10,7 @@
             <input type="text" name="tag3" value="<%= post.tags[2] %>" disabled="disabled"/><br/>
             Body：<br/>
             <textarea name="post" rows="20" cols="100"><%= post.post %></textarea><br/>
-            <input type="submit" value="Save"/>
+            <input class="btn btn-primary" style="margin-left: 50%" type="submit" value="Save"/>
         </form>
     </div>
 </div>
