--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="/stylesheets/customize.css">
 <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 <link rel="stylesheet" href="/stylesheets/bootstrap-theme.min.css">
+    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -33,8 +35,9 @@
               <li <% if (page_name === 'upload') { %>class="active" <% } %>><a title="File Upload" href="/upload">Upload File</a></li>
               <li><a title="Logout" href="/logout">Logout</a></li>
           <% } else { %>
-              <li <% if (page_name === 'login') { %>class="active" <% } %>><a title="Login" href="/login">Login</a></li>
-              <li <% if (page_name === 'reg') { %>class="active" <% } %>><a title="Register" href="/reg">Register</a></li>
+              <li <% if (page_name === 'login') { %>class="active" <% } %>><a title="Login"  data-toggle="modal" data-target="#loginModal" >Login</a></li>
+              <li <% if (page_name === 'reg') { %>class="active" <% } %>><a title="Register" data-toggle="modal" data-target="#registerModal">Register</a></li>
+
           <% } %>
               <li style="margin-left: 20%"><form action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH" class="search;  form-control" /></form></li>
           </ul>
@@ -42,25 +45,61 @@
       </div>
 </nav>
 
+<!-- Login Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Please Login</h4>
+            </div>
 
+            <form method="post" action="/login">
+            <div class="modal-body">
 
-<!-- <nav>
-<span><a title="HOME" href="/">home</a></span>
-<span><a title="Archive" href="/archive">archive</a></span>
-<span><a title="Tags" href="/tags">tags</a></span>
-<span><a title="Links" href="/links">links</a></span>
-<% if (user) { %>
-  <span><a title="Upload" href="/upload">upload</a></span>
-  <span><a title="Post" href="/post">post</a></span>
-  <span><a title="Logout" href="/logout">logout</a></span>
-<% } else { %>
-  <span><a title="Login" href="/login">login</a></span>
-  <span><a title="Register" href="/reg">register</a></span>
-<% } %>
-<span><form action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH" class="search" /></form></span>
-</nav> -->
+                    User Name：<input type="text" name="name"/><br/>
+                    Password： <input type="password" name="password"/><br/>
 
+                <a style="margin-top: 20%" href="/login/github"> Using Github Accout to Login </a>
 
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <input type="submit" class="btn btn-primary"  href="/login"  value="Login"/>
+            </div>
+            </form>
+
+        </div>
+    </div>
+</div>
+
+<!-- Login Modal -->
+<div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Please Register</h4>
+            </div>
+
+            <form method="post" action="/reg">
+                <div class="modal-body">
+
+                    User Name： <input type="text" name="name"/><br/>
+                    Password： <input type="password" name="password"/><br/>
+                    Comfirmed Password：<input type="password" name="password-repeat"/><br/>
+                    Email： <input type="email" name="email"/><br/>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <input type="submit" class="btn btn-primary"  href="/reg"  value="Register"/>
+                </div>
+            </form>
+
+        </div>
+    </div>
+</div>
 
 <article>
 
