--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -7,7 +7,7 @@
             <input type="file" name='file3'/><br>
             <input type="file" name='file4'/><br>
             <input type="file" name='file5'/><br>
-            <input type="submit"/>
+            <input class="btn btn-primary" type="submit"/>
         </form>
     </div>
 </div>
