--- a/views/header.ejs
+++ b/views/header.ejs
@@ -56,8 +56,9 @@
 
             <form method="post" action="/login">
             <div class="modal-body">
-
+                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                     User Name：<input type="text" name="name"/><br/>
+                <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
                     Password： <input type="password" name="password"/><br/>
 
                 <a style="margin-top: 20%" href="/login/github"> Using Github Accout to Login </a>
@@ -84,10 +85,13 @@
 
             <form method="post" action="/reg">
                 <div class="modal-body">
-
+                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                     User Name： <input type="text" name="name"/><br/>
+                    <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
                     Password： <input type="password" name="password"/><br/>
+                    <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
                     Comfirmed Password：<input type="password" name="password-repeat"/><br/>
+                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
                     Email： <input type="email" name="email"/><br/>
 
                 </div>
